# VehicleCounterTollingSytemOpenCV

./: .replit  README.md  app.py  face.py  pyproject.toml
templates/: home.html  jobitem.html
